--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id="intro" class="white-bg section">
         <div class="main-content top3-content">
-            <h2>Confiabilidade e Segurança: Nossa Prioridade</h2>
+            <h2 class="text-h2-index">Confiabilidade e Segurança</h2>
             <p>Na Way Última Milha, entendemos a importância da confiabilidade e segurança em cada entrega que realizamos. Nossa prioridade é garantir que suas mercadorias cheguem ao destino final de forma segura e intacta, proporcionando tranquilidade e confiança em nossos serviços.</p>
             <p>Compromisso com a Integridade:</br>
                 Nosso compromisso com a integridade é evidente em cada etapa do processo de entrega. Desde o manuseio cuidadoso das mercadorias até a utilização de tecnologia avançada de rastreamento, estamos empenhados em garantir que suas cargas sejam tratadas com o máximo de cuidado e respeito.</p>
