atualização de conteúdo

--- a/Sobre.html
+++ b/Sobre.html
@@ -29,13 +29,25 @@
                 <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
             </a>
             <div class="main-content grid-one-content">
+
+                <p class="grid-description"> A empresa é reconhecida por seus clientes pelo seu compromisso com a
+                    qualidade,
+                    a pontualidade e a segurança. <br>
+                    <b> ANDORINHA,
+                        GO Log,
+                        GPZ Comercial,
+                        JK Medicamentos,
+                        MAXIFARMA,
+                        PROFARMA.
+                    </b>
+                    Entre outros mais que atendemos...
+                </p>
                 <h2 class="grid-main-heading">3 razões para nos escolher</h2>
-                <p class="grid-description"> </p>
                 <div class="grid">
                     <div>
 
                         <h3>Atendimento ao Cliente</h3>
-                        <p>     
+                        <p>
                             A Way Última Milha valoriza o atendimento ao cliente e se esforça para oferecer um suporte
                             excepcional em todas as etapas do processo de entrega. Se surgir algum problema ou dúvida,
                             os clientes podem contar com uma equipe dedicada pronta para ajudar e resolver qualquer
@@ -45,13 +57,48 @@
 
                     <div>
                         <h3>Rastreabilidade:</h3>
-                        <p>A empresa oferece um sistema de rastreamento robusto que permite aos clientes acompanhar suas cargas em tempo real. Essa transparência proporciona tranquilidade aos remetentes e destinatários, pois eles podem monitorar o progresso de suas entregas e estar cientes de qualquer alteração no itinerário</p>
+                        <p>A empresa oferece um sistema de rastreamento robusto que permite aos clientes acompanhar suas
+                            cargas em tempo real. Essa transparência proporciona tranquilidade aos remetentes e
+                            destinatários, pois eles podem monitorar o progresso de suas entregas e estar cientes de
+                            qualquer alteração no itinerário</p>
                     </div>
                     <div>
                         <h3>Pontualidade</h3>
-                        <p>A Way Última Milha tem um histórico comprovado de entregas pontuais. Isso significa que os clientes podem confiar que suas encomendas chegarão no prazo esperado, sem atrasos indesejados. A pontualidade é essencial para manter a eficiência da cadeia de suprimentos e garantir a satisfação do cliente.</p>
+                        <p>A Way Última Milha tem um histórico comprovado de entregas pontuais. Isso significa que os
+                            clientes podem confiar que suas encomendas chegarão no prazo esperado, sem atrasos
+                            indesejados. A pontualidade é essencial para manter a eficiência da cadeia de suprimentos e
+                            garantir a satisfação do cliente.</p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section lass="white-bg section">
+            <div class="main-content top3-content">
+                <p>
+                    A WLMC utiliza um sistema de rastreamento em tempo real para acompanhar a localização de suas
+                    entregas. O sistema é fornecido pela Zatix ou Sighra, e oferece recursos como: Posicionamento
+                    global (GPS), Monitoramento de velocidade, Histórico de trajetos, Alertas de eventos.
+                </p>
+                <h2 class="text-h2-index">Localização</h2>
+                <p>A WLMC utiliza o sistema de localização da Sascar para identificar a localização de seus veículos e
+                    entregas. O sistema oferece cobertura em todo o Brasil, e permite que a WLMC rastreie suas
+                    entregas em tempo real.
+                </p>
+                <h2 class="text-h2-index">Câmeras e alarmes</h2>
+                <p>As unidades da WLMC são equipadas com um sistema de câmeras e alarmes para prevenir roubos e
+                    furtos. O sistema é monitorado 24 horas por dia, 7 dias por semana, por uma empresa especializada
+                    em segurança.
+                </p>
+                <h2 class="text-h2-index">Gerenciamento de Risco</h2>
+                <p>A WLMC conta com um serviço de gerenciamento de risco dedicado para identificar e mitigar riscos.
+                    O serviço é fornecido por uma empresa especializada em gerenciamento de risco, e oferece recursos
+                    como, Análise de riscos, Planos de contingência, Monitoramento de riscos, Monitoramento de
+                    Entregas                    
+                </p>
+                <p>Os clientes da WLMC podem acompanhar o status de suas entregas em tempo real, por meio do
+                    site: 
+                </p>
+                <a href="http://www.waysistemalogistico.com.br" target="_blank">www.waysistemalogistico.com.br</a>
             </div>
         </section>
     </main>
