--- a/contato.html
+++ b/contato.html
@@ -28,13 +28,13 @@
                 <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
             </a>
             <div class="main-content intro-content">
-                <div class="intro-text-content">X
+                <div class="intro-text-content">
                     <h2>Contato</h2>
                     <p>
                         Para entrar em contato conosco, estamos disponíveis por telefone (62) 992103944 durante o horário comercial padrão por e-mail a qualquer momento ou pelo Whatsapp. Nossa equipe dedicada está pronta para ajudar com suas consultas, fornecer informações adicionais sobre nossos serviços ou resolver quaisquer problemas que você possa ter. Não hesite em nos contatar, estamos aqui para ajudar.
                     </p>
                     <div class="whatsapp-btn">
-                        <a href="">
+                        <a href="https://api.whatsapp.com/send?phone=55011984404203">
                             <img src="assets/img/icon-whatsapp.webp">
                         </a>
                     </div>
