--- a/index.html
+++ b/index.html
@@ -31,9 +31,22 @@
             <div class="intro-text-content">
                 <h2>Aqui na Way ultima milha </h2>
                 <p>
-                    Garantimos agilidade e eficiência no envio de sua mercadoria, bem como rapidez na entrega. Nossos
-                    serviços são desenvolvidos em cima de necessidades claras de mercado, isto é possível pois contamos
-                    com uma excelente equipe de desenvolvimento com foco em toda cadeia logística de nossos clientes.
+                    Oferecemos soluções de Entregas Rápidas para
+                    o Setor de Saúde em São Paulo e
+                    Regiões Estratégicas
+                </p>
+                <p>A WLMC é uma transportadora de cargas de alto valor agregado que
+                    trabalha com clientes de grande e pequeno porte nos setores de Saúde,
+                    Medicamentos, Beleza e Higiene.
+                    Possuímos uma equipe motivada e capacitada, que está sempre atualizada
+                    com as últimas tecnologias e tendências.
+                    Acreditamos que trabalhando próximo a cada cliente, é possível
+                    compreender suas necessidades e apresentar a melhor solução para
+                    atender aos seus objetivos.
+                    Estamos comprometidos em fornecer um serviço de excelência, que
+                    satisfaça plenamente seus clientes.
+                    "A WLMC Transportes Rodoviários é a transportadora de cargas de alto valor
+                    agregado que você precisa para atender àssuas necessidades."
                 </p>
             </div>
 
@@ -46,17 +59,36 @@
 
     <section id="intro" class="white-bg section">
         <div class="main-content top3-content">
-            <h2 class="text-h2-index">Confiabilidade e Segurança</h2>
-            <p>Na Way Última Milha, entendemos a importância da confiabilidade e segurança em cada entrega que realizamos. Nossa prioridade é garantir que suas mercadorias cheguem ao destino final de forma segura e intacta, proporcionando tranquilidade e confiança em nossos serviços.</p>
-            <p>Compromisso com a Integridade:</br>
-                Nosso compromisso com a integridade é evidente em cada etapa do processo de entrega. Desde o manuseio cuidadoso das mercadorias até a utilização de tecnologia avançada de rastreamento, estamos empenhados em garantir que suas cargas sejam tratadas com o máximo de cuidado e respeito.</p>
-            <p>Padrões de Segurança Rigorosos:</br>
-                Seguimos padrões de segurança rigorosos para proteger suas mercadorias durante o transporte. Nossos veículos são mantidos regularmente e equipados com os mais recentes dispositivos de segurança, garantindo que suas entregas sejam realizadas de maneira segura e confiável.</p>
-            <p>Transparência e Comunicação:</br>
-                Valorizamos a transparência e a comunicação aberta com nossos clientes. Mantemos você informado em tempo real sobre o status de suas entregas e estamos sempre disponíveis para responder a quaisquer perguntas ou preocupações que você possa ter. Nossa abordagem centrada no cliente garante uma experiência de transporte tranquila e livre de estresse.</p>
-        </div>
+            <h2 class="text-h2-index">Experiência</h2>
+            <p>Com mais de 15 anos de atuação, somos especialistas em
+                entregas dedicadas e compartilhadas, com excelência e alto
+                valor agregado. Já realizamos mais de 18 milhões de
+                entregas, com índice de sinistro inferior a 0,1%.
+            </p>
+            <h2 class="text-h2-index">Soluções Farma</h2>
+            <p>
+                Entregamos dos setores de Saúde, Beleza e Higiene em
+                farmácias, clínicas e hospitais, com prazo de D+1. São mais
+                de 18.000 volumes entregues diariamente nas regiões
+                atendidas.
+            </p>
+            <h2 class="text-h2-index">Polos operacionais</h2>
+            <p>
+                • 3 polos em condomínios fechados:<br>
+                • Barueri: 2.000 m²
+                • Hortolândia: 2.000 m²
+                • Votorantim: 1.000 m²
+                • 1 polo fora de condomínios fechados:<br>
+                • Praia Grande: 600 m²<br>
+                Todos monitorados com câmeras e alarmes
+            </p>
+            <h2 class="text-h2-index">Equipe</h2>
+            <p> • Dedicada, treinada e habilitada <br>
+                • Uniformizada e equipada com EPI <br>
+                • Jornada de trabalho de terça-feira a sábado, com 8 horas 
+                diárias</p>
     </section>
-    
+
     <footer-component></footer-component>
     <a class="back-to-top" href="#">➤</a>
 </body>
