--- a/servicos.html
+++ b/servicos.html
@@ -30,9 +30,9 @@
             </a>
             <div class="main-content grid-one-content">
                 <h2 class="grid-main-heading">Serviços oferecidos</h2>
-                <p class="grid-description">A Way Última Milha oferece uma ampla gama de serviços de entrega
-                    personalizados, utilizando tecnologia avançada e processos eficientes para garantir entregas
-                    rápidas, seguras e transparentes.</p>
+                <p class="grid-description">A frota da WLMC é composta por veículos de pequeno, médio
+                    e grande porte, rastreados e blindados se necessário. Todos os
+                    veículos possuem seguro próprio e gerenciamento de risco</p>
                 <div class="grid">
                     <div>
                         <div class="gallery-img">
@@ -40,7 +40,10 @@
                         </div>
                         <div class="grid-text-img">
                             <h1>Carga fracionada</h1>
-                            <p>A Way Última Milha oferece serviços de entrega de cargas fracionadas, adaptados às necessidades específicas de cada cliente. Com nossa abordagem flexível e eficiente, garantimos que mesmo as cargas menores sejam entregues com rapidez e segurança, proporcionando tranquilidade aos nossos clientes</p>
+                            <p>A Way Última Milha oferece serviços de entrega de cargas fracionadas, adaptados às
+                                necessidades específicas de cada cliente. Com nossa abordagem flexível e eficiente,
+                                garantimos que mesmo as cargas menores sejam entregues com rapidez e segurança,
+                                proporcionando tranquilidade aos nossos clientes</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
 
@@ -52,7 +55,10 @@
                         </div>
                         <div class="grid-text-img">
                             <h1>Cargas urgentes</h1>
-                            <p>A Way Última Milha é especializada na entrega de cargas urgentes. Com nossa equipe dedicada e processos ágeis, garantimos que suas cargas urgentes sejam entregues com máxima prioridade e dentro do prazo necessário. Conte conosco para soluções rápidas e confiáveis em suas necessidades logísticas mais urgentes.</p>
+                            <p>A Way Última Milha é especializada na entrega de cargas urgentes. Com nossa equipe
+                                dedicada e processos ágeis, garantimos que suas cargas urgentes sejam entregues com
+                                máxima prioridade e dentro do prazo necessário. Conte conosco para soluções rápidas e
+                                confiáveis em suas necessidades logísticas mais urgentes.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
 
@@ -63,75 +69,48 @@
                         </div>
                         <div class="grid-text-img">
                             <h1>Pequenas entregas</h1>
-                            <p>A Way Última Milha oferece soluções eficientes para pequenas entregas. Com nossa logística flexível e adaptável, garantimos que até as cargas menores sejam entregues com agilidade e segurança. Independentemente do tamanho da sua remessa, estamos comprometidos em fornecer um serviço confiável e de qualidade para atender às suas necessidades.</p>
+                            <p>A Way Última Milha oferece soluções eficientes para pequenas entregas. Com nossa
+                                logística flexível e adaptável, garantimos que até as cargas menores sejam entregues com
+                                agilidade e segurança. Independentemente do tamanho da sua remessa, estamos
+                                comprometidos em fornecer um serviço confiável e de qualidade para atender às suas
+                                necessidades.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="pricing" class=" white-bg section">
+        <section id="intro" class="white-bg section">
             <div class="main-content top3-content">
-                <h2>Pricing</h2>
-                <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that
-                    needed to know about the new architecture, before moving on to the concept of Universal Binaries.
+                <h2 class="text-h2-index">Frota</h2>
+                <p>A WLMC possui uma frota de mais de 400 veículos, distribuídos em três
+                    categorias: <br>
+                    <b>Veículos de pequeno porte</b>
+                    Fiorinos, para entregas urbanas;
+                    <br>
+                    <b>Veículos de médio porte</b>
+                    Vans, para entregas interurbanas e urbanas;
+                    <br>
+                    <b>Veículos de grande porte</b>
+                    Veículos de grande porte
                 </p>
-                <p>We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big
-                    Sur,
-                    and discuss various updater problems we had to deal with. We’ll conclude with the release and an
-                    overview of various other improvements that are in the pipeline.</p>
-                <div class="responsive-table">
-
-                    <table>
-                        <caption> Pricing table</caption>
-
-                        <thead>
-                            <tr>
-                                <th>Title 1</th>
-                                <th>Title 2</th>
-                                <th>Title 3</th>
-                                <th>Title 4</th>
-                                <th>Title 5</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>content 1</td>
-                                <td>content 2</td>
-                                <td>content 3</td>
-                                <td>content 4</td>
-                                <td>content 5</td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td>content 1</td>
-                                <td>content 2</td>
-                                <td>content 3</td>
-                                <td>content 4</td>
-                                <td>content 5</td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td>content 1</td>
-                                <td>content 2</td>
-                                <td>content 3</td>
-                                <td>content 4</td>
-                                <td>content 5</td>
-                            </tr>
-                        </tbody>
-                        <tfoot>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>Testando</td>
-                            </tr>
-                        </tfoot>
-                    </table>
-                </div>
+                <p>A frota da WLMC também conta com alguns caminhões blindados, para
+                    entregas de produtos de alto valor.
+                </p>
+            </div>
+        </section>
+        <section id="intro" class="white-bg section">
+            <div class="main-content top3-content">
+                <h2 class="text-h2-index">Transferências
+                    com veículos
+                    dedicados</h2>
+                <p>
+                    <b>Entrega dedicada</b>
+                    A entrega dedicada é uma solução personalizada que atende às
+                    necessidades específicas de cada cliente. A WLMC disponibiliza
+                    o veículo adequado à operação, considerando o tipo de carga,
+                    o volume e a distância a ser percorrida.
+                </p>
             </div>
         </section>
     </main>
