atualização de textos

--- a/index.html
+++ b/index.html
@@ -35,19 +35,10 @@
                     o Setor de Saúde em São Paulo e
                     Regiões Estratégicas
                 </p>
-                <p>A WLMC é uma transportadora de cargas de alto valor agregado que
-                    trabalha com clientes de grande e pequeno porte nos setores de Saúde,
-                    Medicamentos, Beleza e Higiene.
-                    Possuímos uma equipe motivada e capacitada, que está sempre atualizada
-                    com as últimas tecnologias e tendências.
-                    Acreditamos que trabalhando próximo a cada cliente, é possível
-                    compreender suas necessidades e apresentar a melhor solução para
-                    atender aos seus objetivos.
-                    Estamos comprometidos em fornecer um serviço de excelência, que
-                    satisfaça plenamente seus clientes.
-                    "A WLMC Transportes Rodoviários é a transportadora de cargas de alto valor
-                    agregado que você precisa para atender àssuas necessidades."
+                <p>A WLMC é uma transportadora especializada em cargas de alto valor agregado, atendendo tanto clientes de grande quanto de pequeno porte nos setores de Saúde, Medicamentos, Beleza e Higiene. Nossa operação concentra-se exclusivamente nas regiões de São Paulo, garantindo um serviço ágil e eficiente para atender às demandas específicas desses setores. Além disso, atuamos na última milha da logística, lidando diretamente com o consumidor final, assegurando uma entrega direta e satisfatória.
                 </p>
+                <p>"A WLMC Transportes Rodoviários é a transportadora de cargas de alto valor
+                    agregado que você precisa para atender àssuas necessidades."</p>
             </div>
 
             <div class="intro-img">
@@ -60,17 +51,16 @@
     <section id="intro" class="white-bg section">
         <div class="main-content top3-content">
             <h2 class="text-h2-index">Experiência</h2>
-            <p>Com mais de 15 anos de atuação, somos especialistas em
-                entregas dedicadas e compartilhadas, com excelência e alto
-                valor agregado. Já realizamos mais de 18 milhões de
-                entregas, com índice de sinistro inferior a 0,1%.
+            <p>Com mais de 15 anos de atuação, somos especialistas em entregas dedicadas e compartilhadas, oferecendo
+                serviços de excelência e alto valor agregado. Já realizamos mais de 18 milhões de entregas, com um
+                índice de sinistros inferior a 0,1%.
             </p>
             <h2 class="text-h2-index">Soluções Farma</h2>
             <p>
-                Entregamos dos setores de Saúde, Beleza e Higiene em
-                farmácias, clínicas e hospitais, com prazo de D+1. São mais
-                de 18.000 volumes entregues diariamente nas regiões
-                atendidas.
+
+                Entregamos produtos dos setores de Saúde, Beleza e Higiene diretamente em farmácias, clínicas e
+                hospitais, com um prazo de entrega de D+1. São mais de 18.000 volumes entregues diariamente nas regiões
+                em que atuamos.
             </p>
             <h2 class="text-h2-index">Polos operacionais</h2>
             <p>
@@ -85,7 +75,7 @@
             <h2 class="text-h2-index">Equipe</h2>
             <p> • Dedicada, treinada e habilitada <br>
                 • Uniformizada e equipada com EPI <br>
-                • Jornada de trabalho de terça-feira a sábado, com 8 horas 
+                • Jornada de trabalho de terça-feira a sábado, com 8 horas
                 diárias</p>
     </section>
 
