atualização de conteúdo 1.2

--- a/index.html
+++ b/index.html
@@ -31,14 +31,11 @@
             <div class="intro-text-content">
                 <h2>Aqui na Way ultima milha </h2>
                 <p>
-                    Oferecemos soluções de Entregas Rápidas para
-                    o Setor de Saúde em São Paulo e
-                    Regiões Estratégicas
+                    Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo em Regiões Estratégicas.
                 </p>
-                <p>A WLMC é uma transportadora especializada em cargas de alto valor agregado, atendendo tanto clientes de grande quanto de pequeno porte nos setores de Saúde, Medicamentos, Beleza e Higiene. Nossa operação concentra-se exclusivamente nas regiões de São Paulo, garantindo um serviço ágil e eficiente para atender às demandas específicas desses setores. Além disso, atuamos na última milha da logística, lidando diretamente com o consumidor final, assegurando uma entrega direta e satisfatória.
+                <p>Na WLMC Transportes Rodoviários, não somos apenas uma transportadora; somos comprometidos em oferecer soluções ágeis e eficientes para as demandas do setor de Saúde, Medicamentos, Beleza e Higiene.
                 </p>
-                <p>"A WLMC Transportes Rodoviários é a transportadora de cargas de alto valor
-                    agregado que você precisa para atender àssuas necessidades."</p>
+                <p>Nossa equipe altamente capacitada e tecnologicamente atualizada está pronta para entender suas necessidades e superar expectativas. Conte conosco para um serviço de excelência que atenda plenamente às suas necessidades.</p>
             </div>
 
             <div class="intro-img">
