atualização de conteúdo 1.3

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </a>
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>Aqui na Way ultima milha </h2>
+                <h2>Aqui na Way última milha </h2>
                 <p>
                     Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo em Regiões Estratégicas.
                 </p>
