adcionando aa localização

--- a/contato.html
+++ b/contato.html
@@ -18,10 +18,9 @@
     <script type="module" src="assets/components/footer.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <div class="color-menu">
-        <header-component></header-component>
-    </div>
+    <header-component></header-component>
     <main>
         <section id="Contact" class="intro main-bg section">
             <a href="index.html">
@@ -31,7 +30,11 @@
                 <div class="intro-text-content">
                     <h2>Contato</h2>
                     <p>
-                        Para entrar em contato conosco, estamos disponíveis por telefone (62) 992103944 durante o horário comercial padrão por e-mail a qualquer momento ou pelo Whatsapp. Nossa equipe dedicada está pronta para ajudar com suas consultas, fornecer informações adicionais sobre nossos serviços ou resolver quaisquer problemas que você possa ter. Não hesite em nos contatar, estamos aqui para ajudar.
+                        Para entrar em contato conosco, estamos disponíveis por telefone (62) 992103944 durante o
+                        horário comercial padrão por e-mail a qualquer momento ou pelo Whatsapp. Nossa equipe dedicada
+                        está pronta para ajudar com suas consultas, fornecer informações adicionais sobre nossos
+                        serviços ou resolver quaisquer problemas que você possa ter. Não hesite em nos contatar, estamos
+                        aqui para ajudar.
                     </p>
                     <div class="whatsapp-btn">
                         <a href="https://api.whatsapp.com/send?phone=55011984404203">
