--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 </head>
 
 <body>
-    <div class="color-menu">
-        <header-component></header-component>
-    </div>
+    <header-component></header-component>
     <section id="home" class="intro main-bg section">
         <a href="index.html">
             <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
@@ -33,9 +31,12 @@
                 <p>
                     Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo em Regiões Estratégicas.
                 </p>
-                <p>Na WLMC Transportes Rodoviários, não somos apenas uma transportadora; somos comprometidos em oferecer soluções ágeis e eficientes para as demandas do setor de Saúde, Medicamentos, Beleza e Higiene.
+                <p>Na WLMC Transportes Rodoviários, não somos apenas uma transportadora; somos comprometidos em oferecer
+                    soluções ágeis e eficientes para as demandas do setor de Saúde, Medicamentos, Beleza e Higiene.
                 </p>
-                <p>Nossa equipe altamente capacitada e tecnologicamente atualizada está pronta para entender suas necessidades e superar expectativas. Conte conosco para um serviço de excelência que atenda plenamente às suas necessidades.</p>
+                <p>Nossa equipe altamente capacitada e tecnologicamente atualizada está pronta para entender suas
+                    necessidades e superar expectativas. Conte conosco para um serviço de excelência que atenda
+                    plenamente às suas necessidades.</p>
             </div>
 
             <div class="intro-img">
