atualizações de layout 1.0

--- a/contato.html
+++ b/contato.html
@@ -30,8 +30,8 @@
                 <div class="intro-text-content">
                     <h2>Contato</h2>
                     <p>
-                        Para entrar em contato conosco, estamos disponíveis por telefone (62) 992103944 durante o
-                        horário comercial padrão por e-mail a qualquer momento ou pelo Whatsapp. Nossa equipe dedicada
+                        Para entrar em contato conosco, estamos disponíveis por telefone (11) 98440-4203 durante o
+                        horário comercial padrão, por e-mail a qualquer momento ou pelo Whatsapp. Nossa equipe dedicada
                         está pronta para ajudar com suas consultas, fornecer informações adicionais sobre nossos
                         serviços ou resolver quaisquer problemas que você possa ter. Não hesite em nos contatar, estamos
                         aqui para ajudar.
@@ -74,7 +74,7 @@
                             <textarea name="message" id="messsage" cols="30" rows="10"
                                 placeholder="Your message"></textarea>
                         </div>
-                        <div class="form-group full-width">
+                        <div class="form-group enviar full-width">
                             <button type="submit">Enviar mensagem</button>
                         </div>
                     </fieldset>
