atualização de detalhes

--- a/Sobre.html
+++ b/Sobre.html
@@ -100,6 +100,21 @@
                 </p>
                 <a href="http://www.waysistemalogistico.com.br" target="_blank">www.waysistemalogistico.com.br</a>
             </div>
+            <div class="funcionamentos">
+                <div class="text-funcionamento">
+                    <h2 class="text-h2-index">Autorizações de Funcionamentos</h2>
+                    <ul>
+                        <li>AE: Especial Portaria 344</li>
+                        <li>AFE: Medicamentos</li>
+                        <li>AFE: Correlatos</li>
+                        <li>AFE: Cosméticos</li>
+                        <li>SIVISA: Licença de Funcionamento do Sistema de 
+                            Informação da Vigilância Sanitária
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
     <footer-component></footer-component>
