--- a/contato.html
+++ b/contato.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="intro-img">
                     <img src="assets/img/imagem-entregas_footer.jpg"
-                        alt="desenho de um homem segurando a logo de css, mulher segurando logo de java script, homem segurando logo de html">
+                        alt="Compromisso e pontualidade a cada entrega, entregas rápidas">
                 </div>
                 <div class="contact-form">
                     <fieldset class="form-grid">
