--- a/servicos.html
+++ b/servicos.html
@@ -83,19 +83,7 @@
         <section id="intro" class="white-bg section">
             <div class="main-content top3-content">
                 <h2 class="text-h2-index">Frota</h2>
-                <p>A WLMC possui uma frota de mais de 400 veículos, distribuídos em três
-                    categorias: <br>
-                    <b>Veículos de pequeno porte</b>
-                    Fiorinos, para entregas urbanas;
-                    <br>
-                    <b>Veículos de médio porte</b>
-                    Vans, para entregas interurbanas e urbanas;
-                    <br>
-                    <b>Veículos de grande porte</b>
-                    Veículos de grande porte
-                </p>
-                <p>A frota da WLMC também conta com alguns caminhões blindados, para
-                    entregas de produtos de alto valor.
+                <p>Veículos de grande porte Caminhões Toco e TRUCK, para coletas e entregas dedicadas, transferências...
                 </p>
                 <br>
                 <h2 class="text-h2-index">Transferências
